--- a/.github/workflows/gitsonarintegration.yml
+++ b/.github/workflows/gitsonarintegration.yml
@@ -24,6 +24,16 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      - name: Install SonarQube Scanner
+        run: |
+          SONAR_SCANNER_VERSION=6.0.0.4432
+          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip
+          unzip sonar-scanner.zip
+          sudo mv sonar-scanner-${SONAR_SCANNER_VERSION}-linux /opt/sonar-scanner
+          sudo ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner
+        env:
+          SONAR_SCANNER_OPTS: "-Xmx2048m"
+
       - name: Run SonarQube Scan
         run: |
           sonar-scanner \
