--- a/.github/workflows/gitsonarintegration.yml
+++ b/.github/workflows/gitsonarintegration.yml
@@ -8,31 +8,21 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: self-hosted  # Use your self-hosted runner
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3  # Latest version of the checkout action
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Disable shallow clone for full history analysis
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'  # Adjust to the Python version used in your project
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Install SonarQube Scanner
-        run: |
-          SONAR_SCANNER_VERSION=6.0.0.4432
-          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${SONAR_SCANNER_VERSION}-linux.zip
-          unzip sonar-scanner.zip
-          sudo mv sonar-scanner-${SONAR_SCANNER_VERSION}-linux /opt/sonar-scanner
-          sudo ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner
-        env:
-          SONAR_SCANNER_OPTS: "-Xmx2048m"
 
       - name: Run SonarQube Scan
         run: |
@@ -42,11 +32,4 @@ jobs:
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
-          SONAR_SCANNER_OPTS: "-Xmx2048m"  # Optional: Increase Java memory if needed
-
-      # Optional: Uncomment the following lines to enforce Quality Gate
-      # - name: Quality Gate check
-      #   uses: sonarsource/sonarqube-quality-gate-action@v1.0.2
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_SCANNER_OPTS: "-Xmx2048m"
